--- a/code/index.html
+++ b/code/index.html
@@ -402,7 +402,7 @@
                 <span>Invoice Management System</span>
             </div>
             <nav class="nav">
-                <a href="#dashboard">Dashboard</a>
+                <a href="#dashboard" onclick="window.location.href='dashboard/dasboard.html'">Dashboard</a>
                 <a href="#search">Search</a>
                 <a href="#add" onclick="window.location.href='add-newinvoice/add-invoice.html'">Add Invoice</a>
                 <a href="#view">View All</a>
@@ -570,4 +570,5 @@
         <p>&copy; 2025 Invoice Management System. All rights reserved.</p>
     </footer>
 </body>
+     <script src="./dashboard/dasboard.js"></script>
 </html>
