initially frontend done

--- a/code/dashboard/dasboard.html
+++ b/code/dashboard/dasboard.html
@@ -645,8 +645,8 @@
                 <button class="btn btn-success" onclick="openAddUserModal()">
                     <span>➕</span> Add New User
                 </button>
-                <button class="btn btn-outline" onclick="window.location.href='index.html'">
-                    <span>🏠</span> Dashboard
+                <button class="btn btn-outline" onclick="window.location.href='../index.html'">
+                     Home 
                 </button>
             </div>
         </div>
