--- a/code/add-newinvoice/add-invoice.html
+++ b/code/add-newinvoice/add-invoice.html
@@ -429,11 +429,11 @@
     <!-- Main Container -->
     <div class="container">
         <!-- Back Button -->
-        <a href="index.html" class="back-button">
+        <a href="../index.html" class="back-button">
             <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
             </svg>
-            Back to Dashboard
+            Back to Home
         </a>
 
         <!-- Success Message -->
