--- a/code/add-newinvoice/add-invoice.html
+++ b/code/add-newinvoice/add-invoice.html
@@ -418,10 +418,10 @@
                 <span>Invoice Management System</span>
             </div>
             <nav class="nav">
-                <a href="index.html">Dashboard</a>
-                <a href="#search">Search</a>
+                <a href="../index.html">Dashboard</a>
+                <a href="../index.html">Search</a>
                 <a href="add-invoice.html">Add Invoice</a>
-                <a href="#view">View All</a>
+                <a href="#view" >View All</a>
             </nav>
         </div>
     </header>
