--- a/login.html
+++ b/login.html
@@ -365,7 +365,7 @@
                             <a href="#forgot">Forgot Password?</a>
                         </div>
 
-                        <button type="submit" class="btn" onclick="window.location.href='index.html'">Login</button>
+                          <button type="submit" class="btn">Login</button>
                     </form>
                 </div>
 
